[metadata]
name = KiMoPack
version = 5.5.1
author = Jens Uhlig
author_email = jens.uhlig@chemphys.lu.se
description = A comprehensive package for the analysis of kinetic data.
long_description = file: README.rst
url = https://github.com/erdzeichen/KiMoPack
project_urls =
    Bug Tracker = https://github.com/erdzeichen/KiMoPack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
    Framework :: Jupyter
[options]
package_dir == src
packages = find:
python_requires >=3.8
install_requires =
	os
	pandas>="1.1.4"
	h5py>="3.1"
	matplotlib>="3.3"
	numpy>="1.19"
	qt>="5.9"
	lmfit>="1.0"
	python-pptx>="0.6.18"
	scipy>="1.5"
	pathlib
	tkinter
	time
	numbers
	python_version >= "3.8"
[options.packages.find]
where = src